<resources>
    <string name="app_name">MoviesApp</string>
    <string name="movies">Movies</string>
    <string name="welcome">Welcome!</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard">Choose what\nyou like</string>
    <string name="the_godfather">The\nGodfather</string>
    <string name="drama">Drama</string>
    <string name="done">Done</string>
    <string name="parasite">Parasite</string>
    <string name="art_nhouse">Art\nHouse</string>
    <string name="tarantino">Tarantino</string>
    <string name="big_nlebowsky">Big\nLebowsky</string>
    <string name="taika_nwaititi">Taika\nWaititi</string>
    <string name="zombieland">Zombieland</string>
    <string name="clerks">CLERKS</string>
    <string name="a_24">A 24</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="maria_schneider">Maria Schneider</string>
    <string name="e_mail">E-Mail</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="explore_titulo">Explore</string>
    <string name="selections">Selections</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="example_text_in_selections_tab">A 24 Studio Films</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="name">Name</string>
    <string name="people">People</string>
    <string name="watched">Watched</string>
    <string name="want">Want</string>
    <string name="my_movies">My Movies</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="button">Button</string>
    <string name="log_out">Log Out</string>

    <string name="we_will_let_you_know_when_the_movies_you_ve_bookmarked_will_be_released">We will let you know when the movies you\'ve bookmarked will be released</string>
    <string name="movie_releases">Movie Releases</string>
    <string name="about_and_help">About and Help</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="connect_with_imdb">Connect with IMDb</string>
    <string name="shows">Shows</string>
    <string name="actors">Actors</string>
    <string name="_46_movies">46 Movies</string>
    <string name="sorted_by_my_rating">Sorted by My Rating</string>

</resources>