<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".Activities.DashboardActivity">

    <TextView
        android:id="@+id/textView3"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="-8sp"
        android:text="@string/title_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button8"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/fondo_boton_dash4"
                android:fontFamily="@font/karla_bold"
                android:text="@string/clerks"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.568" />

            <Button
                android:id="@+id/button12"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="124dp"
                android:background="@drawable/fondo_boton_dash4"
                android:fontFamily="@font/karla_bold"
                android:text="@string/tarantino"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button11"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04000002" />

            <Button
                android:id="@+id/button10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="68dp"
                android:background="@drawable/fondo_boton_dash3"
                android:fontFamily="@font/karla_bold"
                android:text="@string/zombieland"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="120dp"
                android:background="@drawable/fondo_boton_dashboard"
                android:fontFamily="@font/karla_bold"
                android:text="@string/taika_nwaititi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.88"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="83dp"
                android:background="@drawable/fondo_boton_dash3"
                android:fontFamily="@font/karla_bold"
                android:text="@string/big_nlebowsky"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.856"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="220dp"
                android:layout_marginTop="148dp"
                android:background="@drawable/fondo_boton_dashboard"
                android:fontFamily="@font/karla_bold"
                android:text="@string/art_nhouse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.191"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="234dp"
                android:background="@drawable/fondo_boton_dash3"
                android:fontFamily="@font/karla_bold"
                android:text="@string/parasite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/button11"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="140dp"
                android:background="@drawable/fondo_boton_dash2"
                android:fontFamily="@font/karla_bold"
                android:text="@string/a_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13999999" />

            <Button
                android:id="@+id/button13"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="288dp"
                android:background="@drawable/fondo_boton_dash2"
                android:fontFamily="@font/karla_bold"
                android:text="@string/the_godfather"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button9"
                app:layout_constraintTop_toBottomOf="@+id/button12"
                app:layout_constraintVertical_bias="0.754" />

            <Button
                android:id="@+id/button14"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="153dp"
                android:background="@drawable/fondo_boton_dash2"
                android:fontFamily="@font/karla_bold"
                android:text="@string/drama"
                app:layout_constraintBottom_toTopOf="@+id/button13"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button12"
                app:layout_constraintVertical_bias="0.513" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnDone"
        style="@style/BotonesNormales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/done"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>