<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="221dp"
            android:layout_height="141dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/username"
            android:textAppearance="@style/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView26" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/edit_profile"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#56555a"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/log_out"
            android:textColor="@color/salmon"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/change_password"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#ebebec"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/connect_with_imdb"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#ebebec"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#ebebec"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="294dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#ebebec"
            android:textSize="20sp"
            android:text="@string/movie_releases"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/about_and_help"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#ebebec"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="140dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button15"
            app:tint="#5C5959" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="363dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/imageView27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/switch1"
            app:tint="#5C5959" />

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="363dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/switch1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/imageView30"
            app:tint="#5C5959" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="363dp"
            android:layout_marginTop="300dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#5C5959" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="269dp"
            android:layout_height="61dp"
            android:layout_marginEnd="50dp"
            android:text="@string/we_will_let_you_know_when_the_movies_you_ve_bookmarked_will_be_released"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#56555a"
            android:textSize="14sp"

            app:layout_constraintBottom_toTopOf="@+id/button15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="TextContrastCheck" />

        <Switch

            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="45dp"
            android:thumbTint="#FFFFFF"
            android:trackTint="@color/salmon"
            app:layout_constraintBottom_toTopOf="@+id/button15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>